--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<% if user_signed_in? %>
-
-	<p>Hellow, <%= current_user.name %> - <%= link_to "Sign_out", destroy_user_session_path, :method => 'delete' %></p>
-
-	<br>
-
-<% end %>
-<%= yield %>
-
+	<div class="navbar">
+		<% if user_signed_in? %>
+			<h3>Hello, <%= current_user.name %></h3>
+			<h3 class="right"><%= link_to "Sign_out", destroy_user_session_path, :method => 'delete' %></h3>
+		<% end %>
+	</div>
+	<div class="container">
+		<%= yield %>
+	</div>
 </body>
 </html>
