installed groupdate and chartkick gem, but then realized groupdate won't work with SQLite, so also migrated over to postgres.  got some ahoy data to show up on a line chart.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,4 +30,6 @@
 
 <%= link_to 'See All Users', users_path, class: 'btn' %>
 
-<%= line_chart Visit.group_by(:created_at).count %>
+<h1 class="title">Site Activity</h1>
+
+<%= line_chart @events %>
