added a geo map, and have to quit for the day

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -41,3 +41,7 @@
 <h1 class="title">Browser Usage</h1>
 
 <%= pie_chart @browsers %>
+
+<h1 class="title">Locations</h1>
+
+<%= geo_chart @locations %>
