fixed the google map chart

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -43,5 +43,5 @@
 <%= pie_chart @browsers %>
 
 <h1 class="title">Locations</h1>
-
+<%= javascript_include_tag "//www.google.com/jsapi" %>
 <%= geo_chart @locations %>
