got vanity working and displaying results at /vanity

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<h1 id="test_description">Note: Vanity is testing clicks on the above Test link</h1>
+
 <h1 class="title">All Posts</h1>
 
 <table>
